[package]
name = "seer-demo"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bincode = "1.3.3"
borsh = { version = "1.5.7", features = ["derive", "unstable__schema"] }
spl-token = "6.0"
spl-associated-token-account = "7.0.0"
seer = { workspace = true }
solana-account = { workspace = true }
solana-address = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-loader-v3-interface = { workspace = true }
spl-associated-token-account-interface = { workspace = true, features = [
    "borsh",
] }
solana-program-test = { workspace = true }
solana-program = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-system-interface = { workspace = true }
solana-system-program = { workspace = true }
solana-transaction = { workspace = true }
solana-program-binaries = { workspace = true }
tokio.workspace = true

[lints]
workspace = true
