[package]
name = "seer-test"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bincode = "1.3.3"
seer = { workspace = true }
solana-account = { workspace = true }
solana-address = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-loader-v3-interface = { workspace = true }
solana-program-test = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-system-interface = { workspace = true }
solana-transaction = { workspace = true }

[lints]
workspace = true

[lib]
name = "seer_utils"
path = "src/lib.rs"
crate-type = ["cdylib"]   # or ["staticlib"]
