[package]
name = "seer"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib"]
name = "seer"

[dependencies]
once_cell = "1.21.3"
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
sqlx = { version = "=0.8.1", features = ["sqlite"] }
rusqlite = "=0.32.1"
gimli = "0.32.3"
rustc-demangle = "0.1.26"
anyhow.workspace = true
object = "0.37.3"
serde.workspace = true
serde_json.workspace = true
memmap2.workspace = true
typed-arena = "2.0.2"
regex.workspace = true
fallible-iterator = "0.3.0"

[lints]
workspace = true
